# salahcli

./: .gitignore  LICENSE  README.md  pyproject.toml
salahcli/: __init__.py  cli.py  config.py  methods.py  models.py
salahcli/core/: calculator.py  high_latitude.py  solar.py
salahcli/ui/: __init__.py  render.py  table.py  theme.py
tests/: test_calculator.py
