[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salahcli"
version = "0.1.0"
description = "Islamic prayer time calculation engine"
authors = [
    {name = "Hassan Khan", email = "hassanaiengineer@gmail.com"}
]
dependencies = [
    "rich>=13.0"
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["islam", "prayer", "cli", "astronomy"]

[project.scripts]
salahcli = "salahcli.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]
